feat: list persistent wallets
